<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".UpdateQuizActivity">

        <TextView
            android:id="@+id/tv_update_classes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:text = "@string/update_quiz_questions"
            />

        <TextView
            android:id="@+id/tv_date"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />


        <EditText
            android:id="@+id/edt_question"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_answer"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <com.reginald.editspinner.EditSpinner
            android:id="@+id/spinner_answer"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            app:dropDownDrawable="@drawable/ic_baseline_arrow_drop_down"
            app:dropDownDrawableSpacing="15dp"
            app:dropDownDrawableWidth="25dp"
            app:dropDownDrawableHeight="25dp"
            />

        <TextView
            android:id="@+id/tv_option_a"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/option_a"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />


        <EditText
            android:id="@+id/edt_option_a"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_option_b"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/option_b"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />


        <EditText
            android:id="@+id/edt_option_b"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_option_c"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/option_c"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />


        <EditText
            android:id="@+id/edt_option_c"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_option_d"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/option_d"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />


        <EditText
            android:id="@+id/edt_option_d"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@color/black"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/add_question"
                android:textColor="@color/white"
                android:visibility="visible"/>

            <Button
                android:id="@+id/btn_add_another"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/add_another_question"
                android:textColor="@color/white"
                android:visibility="invisible"/>
        </FrameLayout>

        <Button
            android:id="@+id/btn_return_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/return_home_page"
            android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>