<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddLessonsActivity">

        <TextView
            android:id="@+id/tv_update_classes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:text = "@string/add_lessons"
            />

        <TextView
            android:id="@+id/tv_week"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/current_week"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <com.reginald.editspinner.EditSpinner
            android:id="@+id/spinner_week"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:editable="false"
            app:dropDownDrawable="@drawable/ic_baseline_arrow_drop_down"
            app:dropDownDrawableSpacing="15dp"
            app:dropDownDrawableWidth="25dp"
            app:dropDownDrawableHeight="25dp"
            />

        <TextView
            android:id="@+id/tv_day"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/lesson_day"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <com.reginald.editspinner.EditSpinner
            android:id="@+id/spinner_day"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:editable="false"
            app:dropDownDrawable="@drawable/ic_baseline_arrow_drop_down"
            app:dropDownDrawableSpacing="15dp"
            app:dropDownDrawableWidth="25dp"
            app:dropDownDrawableHeight="25dp"
            />

        <TextView
            android:id="@+id/tv_date"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/lesson_date"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />


        <EditText
            android:id="@+id/edt_date"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:editable="false"/>


        <TextView
            android:id="@+id/tv_location"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <com.reginald.editspinner.EditSpinner
            android:id="@+id/spn_location"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:editable="false"
            app:dropDownDrawable="@drawable/ic_baseline_arrow_drop_down"
            app:dropDownDrawableSpacing="15dp"
            app:dropDownDrawableWidth="25dp"
            app:dropDownDrawableHeight="25dp"
            />


        <TextView
            android:id="@+id/tv_start"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/edt_start"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:editable="false"/>



        <TextView
            android:id="@+id/tv_end"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/edt_end"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:editable="false"/>


        <TextView
            android:id="@+id/tv_mod_name"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/module_name"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <com.reginald.editspinner.EditSpinner
            android:id="@+id/spn_mod_name"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:editable="false"
            app:dropDownDrawable="@drawable/ic_baseline_arrow_drop_down"
            app:dropDownDrawableSpacing="15dp"
            app:dropDownDrawableWidth="25dp"
            app:dropDownDrawableHeight="25dp"
            />


        <TextView
            android:id="@+id/tv_mode"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/mode"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <com.reginald.editspinner.EditSpinner
            android:id="@+id/spn_mode"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:editable="false"
            app:dropDownDrawable="@drawable/ic_baseline_arrow_drop_down"
            app:dropDownDrawableSpacing="15dp"
            app:dropDownDrawableWidth="25dp"
            app:dropDownDrawableHeight="25dp"
            />


        <TextView
            android:id="@+id/tv_lecturer"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/lecturer"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <com.reginald.editspinner.EditSpinner
            android:id="@+id/spn_lecturer"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:editable="false"
            app:dropDownDrawable="@drawable/ic_baseline_arrow_drop_down"
            app:dropDownDrawableSpacing="15dp"
            app:dropDownDrawableWidth="25dp"
            app:dropDownDrawableHeight="25dp"
            />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/add_lesson"
                android:textColor="@color/white"
                android:visibility="visible"/>

            <Button
                android:id="@+id/btn_add_another"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/add_another_lesson"
                android:textColor="@color/white"
                android:visibility="invisible"/>
        </FrameLayout>

        <Button
            android:id="@+id/btn_return_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/return_home_page"
            android:textColor="@color/white"/>

    </LinearLayout>
</ScrollView>