<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/black"
    tools:context=".CoverActivity">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="900dp"
            android:layout_marginTop="-110dp"
            android:layout_marginBottom="-300dp"
            android:layout_marginStart="-20dp"
            android:layout_marginEnd="-50dp"
            android:src="@drawable/background4"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/home" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="28sp"/>

            <TextView
                android:id="@+id/slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slogan"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/login" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_500"
                android:text="@string/signup" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>